Ajustes articulos con campos de stock

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,7 +3,7 @@
 <ul>
   {{#each products}}
     <li>
-      {{this.title}} - ${{this.price}}
+      PRODUCTO: {{this.title}} - PRECIO: ${{this.price}} - STOCK:{{this.stock}}
     </li>
   {{/each}}
 </ul>
